--- a/cities.html
+++ b/cities.html
@@ -248,7 +248,23 @@
         <li><a class="dropdown-item" href="Advanced.html">Advanced Page</a></li>
     </div>
   </div>
-</center>
+  <form>
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email Address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else..</div>
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">City</label>
+        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter your city">
+    </div>
+    <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+    </div>
+    <button type="submit" class="btn btn-primary">SUBMIT</button>
+</form>
+<br><br>
 </body>
 
 </html>
