--- a/cities.html
+++ b/cities.html
@@ -152,9 +152,9 @@
     <hr>
     <br>
     <div class="image-container">
-        <img src="city1.jpg" alt="City 1" class="img-fluid">
-        <img src="city2.jpeg" alt="City 2" class="img-fluid">
-        <img src="city3.jpg" alt="City 3" class="img-fluid">
+        <img src="City1.jpg" alt="City 1" class="img-fluid">
+        <img src="City2.jpeg" alt="City 2" class="img-fluid">
+        <img src="City3.jpg" alt="City 3" class="img-fluid">
     </div>
 
     
