--- a/cities.html
+++ b/cities.html
@@ -274,7 +274,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Newyork</h5>
                     <p class="card-text">New York, often called New York City[a] or NYC, is the most populous city in the United States. With a 2020 population of 8,804,190 distributed over 300.46 square miles (778.2 km2), the city is the most densely populated major city in the United States.</p>
-                    <a href="https://en.wikipedia.org/wiki/New_York_City" class="btn btn-primary">Discover </a>
+                    <a href="https://en.wikipedia.org/wiki/New_York_City" class="btn btn-primary">visit NY </a>
                 </div>
             </div>
         </div>
@@ -286,7 +286,7 @@
                 <div class="card-body">
                     <h5 class="card-title">London</h5>
                     <p class="card-text">London  is the capital and largest city of England and the United Kingdom, with a population of around 8.7 million.</p>
-                    <a href="https://en.wikipedia.org/wiki/London" class="btn btn-primary">Explore London</a>
+                    <a href="https://en.wikipedia.org/wiki/London" class="btn btn-primary">visit London </a>
                 </div>
             </div>
         </div>
